docs/7.57/md/abapderived_types_keys_identifiers.md
---
title: "Use of Keys and RAP BO Instance Identifiers in a Nutshell"
description: |
  The use of keys and RAP BO(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_glosry.htm 'Glossary Entry') instance identifiers(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_inst_identifier_glosry.htm 'Glossary Entry') within RAP BO providers(https://hel
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_keys_identifiers.htm"
abapFile: "abapderived_types_keys_identifiers.htm"
keywords: ["update", "do", "if", "case", "try", "method", "data", "types", "abapderived", "keys", "identifiers"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [ABAP for RAP Business Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_for_rap_bos.htm) →  [Other RAP-Supporting ABAP Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_rap_other.htm) →  [ABAP for RAP, BDEF Derived Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrpm_derived_types.htm) →  [Components of BDEF Derived Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_comp.htm) →  [Components Related to Keys and RAP BO Instance Identification](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_keys_id.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Use of Keys and RAP BO Instance Identifiers in a Nutshell, ABAPDERIVED_TYPES_KEYS_IDE
NTIFIERS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Use of Keys and RAP BO Instance Identifiers in a Nutshell

The use of keys and [RAP BO](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_glosry.htm "Glossary Entry") [instance identifiers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_inst_identifier_glosry.htm "Glossary Entry") within [RAP BO providers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_provider_glosry.htm "Glossary Entry") and [consumers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_consumer_glosry.htm "Glossary Entry") can be versatile and dependent on the scenario and context, i. e. whether the scenario is a [late numbering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_late_numbering.htm) scenario or not - also considering [drafts](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_with_draft.htm) - and whether the context is the [RAP interaction phase](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_int_phase_glosry.htm "Glossary Entry") or the [RAP save sequence](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_save_seq_glosry.htm "Glossary Entry"). The following bullet points outline the most important aspects.

Non-late numbering scenarios:

-   RAP interaction phase
    -   [%cid](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_cid.htm): RAP BO consumer specifies the content ID %cid in RAP create operations for a [RAP BO instance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_bo_instance_glosry.htm "Glossary Entry"), i. e. in ABAP EML requests using [CREATE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_entity_entities_op.htm), [CREATE BY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_entity_entities_op.htm) or RAP [factory actions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_action.htm); %cid should be provided even if there are no other operations referring to it with %cid\_ref; there are also RAP create operations with the addition [AUTO FILL CID](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_entity_entities_fields.htm) in which the %cid specification for the instances is done automatically
    -   [%cid\_ref](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_cid_ref.htm): Has the same value as %cid; used to refer to a RAP BO instance that has been created with %cid as identifier; however, this %cid must exist in the same ABAP EML [MODIFY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmodify_entity_entities.htm) request so that the reference works
    -   [%key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_key.htm): Contains the primary key values; since there is no late assignment of key values, %key contains the final key values in both interaction phase and save sequence; Note: If in draft scenarios %key is used instead of %tky, you must ensure to also handle %is\_draft for the RAP BO instances as well
    -   [%tky](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_tky.htm): The component group includes %key and %is\_draft, hence, it is predominantly used in draft scenarios; but it is recommended that %tky is used also in non-draft scenarios for the keys so as to be prepared for a potential later switch to draft
    -   [%pky](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_pky.htm): Another option to refer to the keys; in non-late numbering scenarios %key is, in principal, the same as %pky since %pid is not available; in scenarios without late numbering and without draft, %pky is, in principal, %tky since %is\_draft is not available
    -   The keys might be referred to with ABAP EML as follows (assuming there is one key field whose name is key\_field). All options have the same effect and are shown below to visualize the component groups and various options to refer to the key:
        
              MODIFY ENTITY bdef
               UPDATE SET FIELDS WITH VALUE #(
                      "key references
                      "( %pky-%key-key\_field = ... )
                      "( %pky-key\_field = ... )
                      "( %tky-%pky-%key-key\_field = ... )
                      "( %tky-%pky-key\_field = ... )
                      "( %tky-%key-key\_field = ... )
                      "( %tky-key\_field = ... )
                      "( %key-key\_field = ... )
                      "( key\_field = ... )
                      "even more options are possible with BDEF derived types
                      "that include the component group %data
                      "( %data-%key-key\_field = ... )
                      "( %data-key\_field = ... )
                      ).
        
-   RAP save sequence
    -   No change in key handling.

Late numbering scenarios:

-   RAP interaction phase
    -   %cid and %cid\_ref are also available in late numbering scenarios fulfilling the same purpose as in non-late numbering scenarios, however, %pid and %key are the most relevant components in the interaction phase to identify instances since they are used for the final key mapping
    -   [%pid](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_pid.htm): Preliminary ID for RAP BO instances; usually created for RAP BO instances in the course of create operations
    -   %key: might be used to include preliminary keys as RAP BO instance identifiers; it must be ensured that the [adjust\_numbers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensaver_adjust_numbers.htm) method in the RAP save sequence maps the final key values to %key
    -   %pky: This component group contains both %pid and %key and might therefore be used to summarize them
    -   %tky: In late numbering scenarios, the use is very convenient because %tky contains both %pid and %key as well as %pky (the extra reference to %pid and %key via %pky is redundant); in case of drafts, it also contains %is\_draft
    -   %pid and %key can both be filled and used in late numbering scenarios to identify a RAP BO instance or just one of them, however, you must ensure that the combination of %pid and %key is unique
    -   As an example, there might be the following options for preliminary identifiers to be used with ABAP EML (assuming there is one key field whose name is key\_field). All options have the same effect (for %pid or preliminary key values) and are shown below to visualize the component groups and various reference options:
        
              MODIFY ENTITY bdef
               UPDATE SET FIELDS WITH VALUE #(
                      "%pid references
                      "( %pid = ... )
                      "( %pky-%pid = ... )
                      "( %tky-%pid = ... )
                      "( %tky-%pky-%pid = ... )
                      "key references
                      "( %pky-%key-key\_field = ... )
                      "( %pky-key\_field = ... )
                      "( %tky-%pky-%key-key\_field = ... )
                      "( %tky-%pky-key\_field = ... )
                      "( %tky-%key-key\_field = ... )
                      "( %tky-key\_field = ... )
                      "( %key-key\_field = ... )
                      "( key\_field = ... )
                      "even more options are possible with BDEF derived types
                      "that include the component group %data
                      "( %data-%key-key\_field = ... )
                      "( %data-key\_field = ... )
                      ).
        
-   RAP save sequence
    -   The focus is here on the adjust\_numbers method since it is the method that deals with the final key mapping.
    -   Depending on the choice of RAP BO instance identifiers, the following must be mapped to final keys that must be stored in %key: %pid or preliminary key values that have been assigned to %key during the interaction phase
    -   %pid and the key values in %key from the interaction phase are automatically assigned to the following component groups when reaching the adjust\_numbers method:
        
        The component group %tmp gets assigned the preliminary key values contained in %key; in principal, %tmp takes over the role that %key has had in the interaction phase to hold the preliminary key values
        
        [%pre](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapderived_types_pre.htm): This component group includes %pid and %tmp and, thus, all possible preliminary identifiers
        
    -   In a nutshell: %pid and %tmp must be mapped to %key in the adjust\_numbers method; however, in applications, typically only %pid or %tmp are mapped to %key
    -   As an example, there might be the following options how to refer to instances with preliminary identifiers and the final keys within the adjust\_numbers method (assuming there is one key field whose name is key\_field):
        
                  ...
                  APPEND VALUE #( "%pid  = ...
                                  "%pre-%pid  = ...
                                  "%tmp-key\_field  = ...
                                  "%pre-%tmp-key\_field  = ...
                                  "%key-key\_field = ...
                                  "key\_field = ...
                            ) TO mapped-bdef.
                  ...
        

Hint

Using %tky is the most convenient choice for referring to keys in whatever context. It always contains all relevant components for the chosen scenario.

Executable Examples

See some simple examples on using the various components in the topic [Examples for BDEF Derived Type Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_abexas.htm).